<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_green"
        tools:context=".fragments.AddRecipeFragment">

        <!-- Top bar -->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/top_bar_recipes"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:background="@drawable/app_bar_background"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageButton
                android:id="@+id/back_button_create"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="22dp"
                android:background="@color/primary_green"
                android:src="@drawable/left_arrow"
                app:layout_constraintBottom_toBottomOf="@+id/recipes_top_bar_text_view"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/recipes_top_bar_text_view" />

            <TextView
                android:id="@+id/recipes_top_bar_text_view"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/primary_green"
                android:fontFamily="@font/montserrat_semibold"
                android:gravity="center"
                android:text="@string/top_bar_name_create"
                android:textColor="@color/light_green"
                android:textSize="26sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!-- Body -->
        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_below="@id/top_bar_recipes"
            android:layout_above="@id/btn_create">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="22dp"
                android:paddingRight="22dp">


                <!-- Create name -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/name_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="42dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">>

                    <TextView
                        android:id="@+id/textView_nameRecipe"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/name_field"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/border_edit_text"
                        android:paddingLeft="22dp"
                        android:paddingTop="12dp"
                        android:paddingRight="22dp"
                        android:paddingBottom="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_nameRecipe">

                        <EditText
                            android:id="@+id/editText_nameRecipe_create"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/name_field_hint"
                            android:textColorHint="@color/text_color_hint"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Create Ingredients -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/ingredients_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/name_container">

                    <TextView
                        android:id="@+id/textView_ingredients"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/ingredients_field"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:layout_marginBottom="2dp"
                        android:fontFamily="@font/montserrat_regular"
                        android:text="@string/ingredients_field_end"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/textView_ingredients"
                        app:layout_constraintStart_toEndOf="@+id/textView_ingredients" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:id="@+id/constraintLayout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/border_edit_text"
                        android:paddingLeft="22dp"
                        android:paddingTop="12dp"
                        android:paddingRight="22dp"
                        android:paddingBottom="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_ingredients">

                        <EditText
                            android:id="@+id/editText_ingredients_create"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/ingredients_field_hint"
                            android:textColorHint="@color/text_color_hint"
                            android:fitsSystemWindows="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

                <!-- Create Description -->
                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/description_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="22dp"
                    android:paddingBottom="22dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/ingredients_container">

                    <TextView
                        android:id="@+id/textView_description"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/montserrat_medium"
                        android:text="@string/description_field"
                        android:textSize="18sp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="12dp"
                        android:background="@drawable/border_edit_text"
                        android:paddingLeft="22dp"
                        android:paddingTop="12dp"
                        android:paddingRight="22dp"
                        android:paddingBottom="12dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/textView_description">

                        <EditText
                            android:id="@+id/editText_description_create"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:background="@android:color/transparent"
                            android:hint="@string/description_field_hint"
                            android:textColorHint="@color/text_color_hint"
                            android:fitsSystemWindows="true"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>



        </ScrollView>

        <Button
            android:id="@+id/btn_create"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="42dp"
            android:text="@string/create"
            android:textSize="22sp"
            android:textColor="@color/light_green"
            android:layout_marginLeft="22dp"
            android:layout_marginRight="22dp"
            android:background="@drawable/button_background"
            android:layout_alignParentStart="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true" />



    </RelativeLayout>
</layout>
